# ssi-onboarding-26

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
bzl/: BUILD.bazel
