package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "ssi-onboarding-26",
    srcs = ["src/main.c"],
    deps = [
        # Pico-SDK libraries
        "@pico-sdk//src/rp2_common/pico_stdlib:pico_stdlib",
        "@pico-sdk//src/rp2_common/pico_stdio_usb:pico_stdio_usb",
        "@pico-sdk//src/rp2_common/hardware_spi:hardware_spi",
        "@pico-sdk//src/rp2_common/hardware_i2c:hardware_i2c",
        "@pico-sdk//src/rp2_common/pico_unique_id",

        # Linker script for RP2350
        "@pico-sdk//src/rp2_common/pico_crt0/rp2350:default_linker_script",
    ],
)
